Change Log for lwip
=================================
2018-01-19
	* Add support for Realtek RTL8211 phy.
2018-01-11
	* Use UINTPTR for axidma baseaddr.
2018-01-10
	* Update xInsideISR flag in emacps_error_handler.
2017-12-06
	* Fix jumbo frame checks to work on R5
2017-11-01
        * Perform AXI DMA lookup based on base address.
2017-10-27
	* Correct proper references of TX BD ring in init_dma() and
	  emacps_error_handler().
2017-10-04
	* Include options to configure mbox in lwip202.mld and lwip202.tcl
2017-10-13
	* Add multicast MAC update for IPv6 in xemacpsif.c and xaxiemacif.c
	* Add IPv6 source in lwip.makefile
2017-09-20
	* Disable L1 prefetch for ARMv8 in init_axi_dma function in xaxiemacif_dma.c.
2017-09-12
	* Disable L1 prefetch for ARMv8 in init_dma function in xemacpsif_dma.c.
2017-09-09
	* Add rx_reset_nodata workaround for Zynq GEM for freertos.
2017-08-29
	* Add support of IGMP in emacps
2017-08-17
	* Upgrade to LWIP2.0.2 version.
	* Removed PPC References
2017-08-14
	* Dont perform data cache related operations when CCI is
	  enabled.
2017-08-11
	* Fix for conflicting types for xInsideISR. Fixes CR-981909.
	* Fix for warnings in lwip141 axiethernet adapter.
2017-08-03
	* Correct compiler used for A9.
2017-07-18
	* Add freertos support for axiethernet fifo configuration.
	* SW workaround for TI DP83867 PHY Data integrity issues on KCU116/VCU118 Boards.
2017-06-14
        * Add support for EL1 non secure mode.
2017-03-07
	* SW workaround for unstable link with TI DP83867 PHY
	  when RX CTRL is not strapped to MODE 3 or 4.
2017-02-13
	* Correct TI PHYCR register initialization
2017-02-03
	* Add jumbo frame support for ZynqMP ethernet
2016-12-19
	* Export options for user to change NO_SYS_NO_TIMERS and
	  LWIP_TCP_KEEP_ALIVE.
2016-12-07
	* Add Support for TI PHY DP83867 SGMII Mode configuration.
2016-11-22
	* Add support in xemaps_physpeed.c for newer version of Xilinx
	  PCS PMA core with phy address scanning.
2016-11-09